Upgrade Clarity monorepo to 17.6.0 & Fix combobox content cut off (#2466)

--- a/src/clr-addons/themes/phs/_css.overrides.scss
+++ b/src/clr-addons/themes/phs/_css.overrides.scss
@@ -240,7 +240,8 @@
   }
 
   .clr-combobox-wrapper,
-  .clr-combobox-input {
+  .clr-combobox-input,
+  .clr-combobox-input-wrapper {
     width: 100%;
   }
 
